--- a/manifest.json
+++ b/manifest.json
@@ -2,23 +2,24 @@
   "name": "Registro Jornada",
   "short_name": "Jornada",
   "description": "Registro de jornadas laborales",
-  "start_url": "/registro-jornada/",
+  "start_url": "./",
+  "scope": "./",
   "display": "standalone",
   "background_color": "#0d0f14",
-  "theme_color": "#00e5a0",
+  "theme_color": "#0d0f14",
   "orientation": "portrait",
   "icons": [
     {
       "src": "icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
     },
     {
       "src": "icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
     }
   ]
 }
